# travis-test

./: .gitignore  .travis.yml  LICENSE  Main.hs  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  travis-test.cabal
.travis/: install-cuda-trusty.sh  install-cuda-xenial.sh  install-llvm-trusty.sh  install-stack.sh  install_dependencies.sh  update-ghc-settings.sh
