name:                   travis-test
version:                0.1.0.0
license:                BSD3
license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
build-type:             Simple
cabal-version:          >=1.10

executable travis-test
  default-language:     Haskell2010
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >= 4.6 && < 5
    -- , cuda
    -- , cufft
    -- , cublas
    -- , cusparse
    -- , cusolver
    -- , nvvm

  -- ghc-options:          -fllvm -optlo-O3

-- vim: nospell
